--- a/app/views/trains.scala.html
+++ b/app/views/trains.scala.html
@@ -14,8 +14,8 @@
 } {
   <dl class="dl-horizontal">
     <dt>Line</dt><dd>@line.name</dd>
-    <dt>Entire Period</dt><dd>@line.timeTablePeriod 分</dd>
     <dt>Pattern</dt><dd>@pattern.name</dd>
+    <dt>Entire Period</dt><dd>@pattern.timeTablePeriod 分</dd>
   </dl>
 
   <ul class="nav nav-tabs" role="tablist">
