--- a/app/views/patterns.scala.html
+++ b/app/views/patterns.scala.html
@@ -6,7 +6,6 @@
 } {
   <dl class="dl-horizontal">
     <dt>Line</dt><dd>@line.name</dd>
-    <dt>Entire Period</dt><dd>@line.timeTablePeriod 分</dd>
   </dl>
 
   <h1>Create</h1>
@@ -15,6 +14,13 @@
       <label for="patternName" class="col-sm-2 control-label">Pattern name</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="patternName">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="timeTablePeriod" class="col-sm-2 control-label">Entire period(min)</label>
+      <div class="col-sm-10">
+        <input type="number" class="form-control" id="timeTablePeriod">
       </div>
     </div>
 
@@ -31,6 +37,7 @@
       <tr>
         <th>ID</th>
         <th>Name</th>
+        <th>Period</th>
         <th></th>
       </tr>
     </thead>
@@ -39,6 +46,7 @@
         <tr>
           <td>@pattern.id</td>
           <td>@pattern.name</td>
+          <td>@pattern.timeTablePeriod</td>
           <td>
             <a href="@routes.Views.trains(pattern.id)">Trains</a>
           </td>
