Speedup averageCalc etc

--- a/app/views/trains.scala.html
+++ b/app/views/trains.scala.html
@@ -111,7 +111,7 @@
             <th>Time</th>
             <th>Average</th>
             @trains.map { train =>
-              <th>@train.trainClass @train.name</th>
+              <th width="2em">@train.trainClass @train.name</th>
             }
           </tr>
         </thead>
@@ -119,7 +119,7 @@
         @stations.map { st =>
           <tr>
             <td>@st.id</td>
-            <td>@st.name</td>
+            <th>@st.name</th>
             <td>@fastest.lift(st.id).map(_ + "分").getOrElse("-")</td>
             <td>@average.lift(st.id).map { min => @{f"$min%.1f分"} }.getOrElse("-")</td>
             @trains.map { train =>
